# rPageIndex

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
scripts/: acceptance_test_answer.py  acceptance_test_assembly.py  acceptance_test_bm25.py  acceptance_test_cleanup.py  acceptance_test_evidence.py  acceptance_test_features.py  acceptance_test_query_rewriter.py  acceptance_test_reasoning.py  acceptance_test_reranker.py  acceptance_test_router.py  acceptance_test_section_tree.py  acceptance_test_tables.py  acceptance_test_verifier.py  acceptance_test_zero_result.py
src/answer/: __init__.py  citation_parser.py  generator.py  prompt_builder.py  verifier.py
src/assembly/: __init__.py  assembler.py  models.py  pipeline.py
src/bm25/: __init__.py  indexer.py  metadata.py  pipeline.py  schemas.py  searcher.py  writers.py
src/cleanup/: __init__.py  abbreviations.json  boilerplate.py  boilerplate_patterns.txt  classifier.py  deduplication.py  list_cleanup.py  ocr_cleanup.py  paragraph.py  pipeline.py  quality.py  search_normalizer.py  table_cleanup.py  whitespace.py
src/evidence/: __init__.py  assembler.py
src/features/: __init__.py  bullet.py  heading.py  key_value.py  models.py  named_entity.py  pipeline.py  repeated.py
src/ingestion/: __init__.py  base.py  dispatcher.py  docx_parser.py  html_parser.py  ocr_parser.py  pdf_parser.py  xlsx_parser.py
src/models/: __init__.py  answer.py  evaluation.py  exceptions.py  index.py  ingestion.py  query.py
src/query/: __init__.py  builder.py  entity_extractor.py  expander.py  (+7 more)
tests/: test_models.py
(+88 files in other folders)
